modified solitaire_rules.xml to account for names used for enums

--- a/src/ooga/resources/rules_phases.properties
+++ b/src/ooga/resources/rules_phases.properties
@@ -1,2 +1,35 @@
 Phase=phase
+Name=name
+ValidDonors=valid_donors
+Category=category
+
+Rules=rules
+Rule=rule
+
+ReceiveRule=receive_rule
+Receiver=receiver
+Quantity=quantity
+Mover=mover
+Direction=direction
+Value=value
+Color=color
+Suit=suit
+NumberCards=num_cards
+IsFaceup=is_faceup
+Donor=donor
+All=*
+
+Action=action
+ReceiverDestination=receiver_dest
+Destination=destination
+Stack=stack
+Shuffle=shuffle
+Offset=offset
+
+MoverDestination=mover_dest
+Flip=flip
+Points=points
+NextPhase=next_phase
+
+
 
