implemented direction and value for rules

--- a/src/ooga/resources/rules_phases.properties
+++ b/src/ooga/resources/rules_phases.properties
@@ -19,7 +19,16 @@ Suit=suit
 NumberCards=num_cards
 IsFaceup=is_faceup
 Donor=donor
+#Name=name
+
 All=*
+Up=u
+Down=d
+Not=!
+Same=\=
+Yes=Y
+No=n
+
 
 Action=action
 ReceiverDestination=receiver_dest
