modified regex in code and solitaire

--- a/src/ooga/resources/rules_phases.properties
+++ b/src/ooga/resources/rules_phases.properties
@@ -9,7 +9,7 @@ Condition=condition
 Rules=rules
 Rule=rule
 
-ReceiveRule=receive_rule
+Validation=validation
 Receiver=receiver
 Mover=mover
 Direction=direction
@@ -43,9 +43,10 @@ Destination=destination
 Stack=stack
 Shuffle=shuffle
 Offset=offset
+Rotation=rotation
 
 MoverDestination=mover_dest
-Flip=flip
+Flip=flip_up
 Points=points
 NextPhase=next_phase
 Phase=phase
